# insurance-bcf

./: README.md  pyproject.toml  run_tests_databricks.py
notebooks/: insurance_bcf_demo.py
src/insurance_bcf/: __init__.py  _mock.py  audit.py  elasticity.py  model.py  simulate.py
tests/: conftest.py  test_audit.py  test_elasticity.py  test_integration.py  test_mock.py  test_model.py  test_simulate.py
