[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-bcf"
version = "0.1.0"
description = "Bayesian Causal Forests for insurance pricing — heterogeneous treatment effects with FCA audit reporting"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "causal-inference",
    "bayesian",
    "treatment-effects",
    "bcf",
    "bart",
    "actuarial",
    "fca",
    "pricing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "stochtree>=0.4.0,<0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
diagnostics = [
    "arviz>=0.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_bcf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
